# tiny-SQL

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  hello.cc  tinyDB.cc
.github/workflow/: linux-x64-gcc.yml
.github/workflows/: linux-x64-clang.yml  linux-x64-gcc.yml  macos-x64.yml  windows-x64-vs2017.yml  windows-x64-vs2019.yml
cmake/: gtest.cmake
include/: btree.h  compiler.h  cursor.h  def.h  memory.h  table.h
script/: install.py
src/: btree.cc  compiler.cc  cursor.cc  main.cc  memory.cc  table.cc
test/: CMakeLists.txt  test_add.cc  test_helper.h  test_meta_command.cc  test_sql.cc  test_sql_statement.cc
